# filemgr

./: CMakeLists.txt  README.md  build.bat  build_debug.bat
icons/: iconset.rgi
include/: filemgr.h
include/filemgr/: funcs.h  globals.h  ray.h  titlebar.h
src/: CMakeLists.txt  main.c
src/filemgr/: titlebar.c
